# keystone-ai

./: .auto-fix-bot.yml  .gitignore  .gitignore.prod  .local  .replit  AAPS_MARKETPLACE_INTEGRATION_PLAN.md  AAPS_PHASE1_COMPLETION_SUMMARY.md  AGENTS.md  ARCHITECTURE_REFACTOR_COMPLETE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  FHS_IMPLEMENTATION.md  INSTANT-EXECUTION-REFACTOR-PLAN.md  INTEGRATION_TODO.md  MACHINE_NATIVE_GOVERNANCE_COMPLETE.md  MCP-LEVEL1-COMPLETION-REPORT.md  MCP-LEVEL3-ENHANCEMENT-ANALYSIS.md  MCP-LEVEL3-OVERALL-PROGRESS.md  MCP-LEVEL3-PHASE1-PROGRESS-REPORT.md  MCP-LEVEL3-PHASE2-COMPLETION-REPORT.md  MCP-LEVEL3-PHASE2-PROGRESS-REPORT.md  MCP-LEVEL3-PHASE3-COMPLETION-REPORT.md  MCP-LEVEL3-PHASE4-COMPLETION-REPORT.md  MCP-LEVEL3-PHASE5-COMPLETION-REPORT.md  MCP-LEVEL3-PHASE6-COMPLETION-REPORT.md  MCP-LEVEL3-PHASES-4-5-6-SUMMARY.md  MULTI_AGENT_MPC_ARCHITECTURE_DESIGN.md  MULTI_AGENT_V1_SPECIFICATION_PACKAGE.md  Makefile  NAMING_GOVERNANCE_INTEGRATION_ANALYSIS.md  PHASE2-FINAL-SUMMARY.md  PHASE3-FINAL-SUMMARY.md  PHASE3-TODO.md  PHASE4-FINAL-STATUS.md  PHASE4-SUMMARY.md  PHASE4-TODO.md  PHASE5-SUMMARY.md  PHASE5-TODO.md  PHASE6-SUMMARY.md  PHASE6-TODO.md  (+44 more)
workspace/: AAPS_MARKETPLACE_INTEGRATION_PLAN.md  ACCEPTANCE_CHECKLIST.md  AXIOM_NAMESPACE_MCP_INTEGRATION_COMPLETE.md  BRANCH_CLEANUP_REPORT.md  CI_ISSUES_FIX_REPORT.md  Cargo.toml  DEPLOYMENT-GUIDE (1).md  FINAL_SUCCESS_REPORT.md  GITHUB_ACTIONS_SECURITY_FIX_COMPLETION_REPORT.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  MANIFEST.in  MIGRATION_SUMMARY.md  MULTI_AGENT_V1_SPECIFICATION_PACKAGE.md  NAMESPACE_MCP_AXIOM_INTEGRATION.yaml  PROJECT_RESTRUCTURE_REPORT.md  PR_715_QUALITY_REVIEW_REPORT.md  QUANTUM_CODE_ALIGNMENT_PROPOSAL.md  README.md  ROOT_ARCHITECTURE.md  SUPERNINJA-MODE-SYSTEM-COMPLETE.md  TECH_DEBT_SCAN_REPORT.json  WORKSPACE_CLEANUP_REPORT.md  auto-fix-bot.yml  package-lock.json  package.json  pyproject.toml  requirements-prod.txt  restructure-project.sh  restructure_log.md  todo.md  命名治理自動化管線.code.yaml
workspace/config/: .eslintrc.yaml  README.md  external_repos.yaml.example  package-lock.json  package.json  requirements-prod.txt  unified-config-index.yaml  wrangler.toml
workspace/config/axiom/: axiom-global-baseline-v2.yaml  global-baseline-v2-machinenativeops.yaml  integration_plan.yaml  layer-directory-mapping.yaml  layer_gap_analysis.yaml  refactor_completion_report.yaml
workspace/config/build-tools/: eslint.config.js
workspace/config/dev/: devcontainer-v2.json  devcontainer.json  install-optional-tools.sh  post-create.sh  post-start-v2.sh  post-start.sh  setup.sh
workspace/config/environments/: dev.yaml  prod.yaml
workspace/config/governance/: governance-manifest.yaml  layer-standardization-governance.yaml  machinenativeops-restructure-spec.json  machinenativeops.config.yaml  module-interaction-governance.yaml  performance-calibration-governance.yaml  quantum-maturity-governance.yaml  resource-optimization-governance.yaml  subdirectory-restructure-spec.json  system-manifest.yaml  system-module-map.yaml  unified-compliance-governance.yaml
workspace/config/instant-execution/: event-triggers-config.yaml  parallel-agents-config.yaml
workspace/config/validation/: world-class-validation.yaml  worldClassValidation.ts
workspace/docs/: AGENT_CONSOLIDATION_SUMMARY.md  AI_MODEL_DEPLOYMENT.md  ARCHITECTURE-REFACTORING-DESIGN.md  ARCHITECTURE_OPTIMIZATION_DASHBOARD.md  ARCHITECTURE_RESTRUCTURING_PLAN.md  AUTOMATION_TOOLS_COMPLETION_REPORT.md  AUTO_FIX_BOT_V2_GUIDE.md  AUTO_REFACTOR_EVOLUTION.md  AXIOM.md  CI_CONSOLIDATED_REPORT.md  CI_CONSOLIDATED_REPORT_MIGRATION_GUIDE.md  CI_HARDENING_NEXT_STEPS.md  COMPLETION_SUMMARY.md  DEEP_WORKFLOW_ANALYSIS.md  DIRECTORY_RESTRUCTURE_AUTOMATION_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SYNC_REPORT.md  DOC_REFACTOR_VALIDATION_REPORT.md  ENGINEER_CORE_FILES_GUIDE.md  FINAL_PHASE2_COMPLETION_REPORT.md  FINAL_REPOSITORY_STATUS_REPORT.md  GOVERNANCE_FRAMEWORK.md  INCOMPLETE_TASKS_SCAN_REPORT.md  INSTANT_EXECUTION_SUMMARY.md  INSTANT_TRIGGERS_IMPLEMENTATION_REPORT.md  INTEGRATION_DEPLOYMENT_SCAN_REPORT.md  ISSUE_RESOLUTION_SUMMARY.md  LANGUAGE_GOVERNANCE_IMPLEMENTATION.md  LAYER0_OPTIMIZATION_SUMMARY.md  LEGACY_EXTRACTION_SUMMARY.md  LIVING_KNOWLEDGE_BASE.md  MIGRATION_GUIDE.md  MULTI_REPO_INTEGRATION_GUIDE.md  MULTI_REPO_QUICKSTART.md  NAMING_GUIDELINES_MANUAL.md  PHASE1_ARCHITECTURE.md  PHASE1_DELIVERY_COMPARISON.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_SETUP_GUIDE.md  PHASE2_SUBDIRECTORY_RESTRUCTURE_COMPLETION.md  (+60 more)
workspace/docs/agents/: LIFECYCLE.md
workspace/docs/api/: dependency-resolver-api.md  enterprise-orchestrator-api.md
workspace/docs/architecture/: CROSS_LANG_COMM.md  README.md  ROOT_DIRECTORY_RESTRUCTURING.md  SYSTEM_ARCHITECTURE.md  UNIFIED_TOOLCHAIN.md  core-engine-language-stack.md  knowledge-graph-processing.md  language-stack.md  naming-conventions.md  repo-map.md
workspace/docs/automation/: self-awareness-dashboard.md
workspace/docs/ci/: AUTONOMOUS_CI_GUARDIAN.md  MCP_WORKFLOW_OBSERVABILITY.md
workspace/docs/ci-cd/: CI_RESTRUCTURE_STRATEGY.md  workflow-coordination.md
workspace/docs/deployment/: CLOUDFLARE_GITHUB_INTEGRATION.md  DEPLOYMENT_GUIDE.md  WRANGLER_INSTALL_UPDATE.md
workspace/engine/: chatops
workspace/mcp/: INTEGRATION_INDEX.yaml  MCP_DEEP_ANALYSIS_REPORT.md  README.md  axiom-dissolved-mcp-architecture.yaml  quantum_verification_report.md  workspace_mcp_validation_report.md
workspace/outputs/: workspace_output_1766462592_5558.txt  workspace_output_1766462633_4917.txt  workspace_output_1766465218_2569.txt  workspace_output_1766465225_5320.txt  workspace_output_1766465232_5584.txt  workspace_output_1766465237_6874.txt  workspace_output_1766465279_6973.txt  workspace_output_1766465376_7696.txt  workspace_output_1766466000_5556.txt
workspace/projects/: chatops
workspace/scripts/: chatops  validate-instant-execution.py
workspace/teams/: README.md  registry.yaml
workspace/tests/: test_unified_pipeline_loader.py
workspace/tools/: namespace-converter.py  namespace-validator.py
(+1442 files in other folders)
